chromium-browser (9.0.597.83~r72435-1) UNRELEASED; urgency=low

  * New beta version.
  * Added a README.Debian and warn about downgrading (Closes: #605548) 
  * honor DEB_BUILD_OPTIONS=nocheck, thanks to Jonathan Nieder
    (Closes: #589653)

 -- Giuseppe Iuculano <iuculano@debian.org>  Sun, 30 Jan 2011 13:58:09 +0100

chromium-browser (9.0.587.0~r66374-1) experimental; urgency=low

  * New dev version

 -- Giuseppe Iuculano <iuculano@debian.org>  Sat, 20 Nov 2010 18:33:03 +0100

chromium-browser (9.0.576.0~r65344-1) experimental; urgency=low

  * New dev version
  * Refreshed patches
  * Added libxtst-dev in build-depends
  * Use v8, libvpx and glew system copy for the moment.
  * Disable tests
  * Do not install /usr/lib/chromium-browser/libosmesa.so (Closes: #599511)

 -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 17 Nov 2010 22:26:37 +0100

chromium-browser (7.0.544.0~r61416-1) UNRELEASED; urgency=low

  * New dev version
  * Remove system-icu.patch, applied upstream
  * Remove icu44.patch, applied upstream
  * Refreshed patches
  * Enable compile-time dependency on gnome-keyring
  * Use system speex
  * Build depends on libv8-dev >= 2.4.7
  * Remove disable_dlog_and_dcheck_in_release_builds.patch
  * Install libosmesa.so ssl_false_start_blacklist_process and xdg-mime

 -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 06 Oct 2010 14:55:53 +0200

chromium-browser (6.0.472.63~r59945-5.1) unstable; urgency=low

  [ Daniel Echeverry ]
  * Updated copyright file to DEP5. Closes: #580784

 -- Daniel Echeverry <epsilon77@gmail.com>  Mon, 17 Jan 2011 22:36:28 -0500

chromium-browser (6.0.472.63~r59945-5) unstable; urgency=high

  * Backported security patches from stable:
    - High Bad pointer handling in node iteration. Credit to Sergey Glazunov.
    - High Stale pointer with CSS + canvas. Credit to Sergey Glazunov. 
    - High Stale pointer with CSS + cursors. Credit to Jan Tošovský.
    - High Stale pointer with SVG use element. Credited anonymously; plus