@@ -4,8 +4,10 @@ chromium-browser (9.0.597.83~r72435-1) UNRELEASED; urgency=low
   * Added a README.Debian and warn about downgrading (Closes: #605548) 
   * honor DEB_BUILD_OPTIONS=nocheck, thanks to Jonathan Nieder
     (Closes: #589653)
+  * Avoid "cannot access" messagges when using ffmpeg internal copy. Thanks to
+    Jonathan Nieder. (Closes: #589563)
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Sun, 30 Jan 2011 13:58:09 +0100
+ -- Giuseppe Iuculano <iuculano@debian.org>  Sun, 30 Jan 2011 14:14:28 +0100
 
 chromium-browser (9.0.587.0~r66374-1) experimental; urgency=low
 
